--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#">Frontend Mentor</a></li>
         <li><a href="#">LinkedIn</a></li>
         <li><a href="#">Twitter</a></li>
-        <li><a href="#">Instagram</a></li>
+        <li class="testemargin"><a href="#" class="testemargin">Instagram</a></li>
       </ul>
     </div>
   </main>
